# epochengine

./: .gitignore  AlmondShell.sln  LICENSE  README.md  acontext.h  acontextcreator.cpp  acontextwindow.h  acoroutine.h  aengine.h  aengineconfig.h  aentity.h  aentityhistory.h  aframework.h  aiplugin.h  almondengine  alogger.h  aopenglcontext.h  aopenglrenderer.h  aopengltriangle.h  apluginconcept.h  arenderer.h  ascene.h  ascenesnapshot.h  aspritebank.h  atexture.h  athreadpool.h  atypes.h  atypeswin32.h  auimanager.h  autilities.h  avulkanquad.h  avulkanrenderer.h  avulkantexture.h  awaitfreequeue.h  changelog.txt  resource.h  roadmap.txt  runcommands.bat  vcpkg.json
AlmondShell/: CMakeLists.txt  CMakePresets.json  Engine.vcxitems  Engine.vcxitems.filters  WinResource.aps  WinResource.rc  acomponentmanager.h  acontextwindow.h  acoroutine.h  aengine.cpp  aengine.h  aentitycomponents.h  aentitycomponentsystem.h  aeventsystem.cpp  aeventsystem.h  aglfwcontext.h  aimageloader.h  almondengine.h  almondshell  almondshell.h  amovementevent.h  aopenglfreetype.h  aopenglquad.h  aplatform.h  apluginasyncloader.h  apluginmanager.h  arobusttime.h  asaveloadsystem.h  atextureatlas.h  atexturepool.h  atypesposix.h  auibutton.h  aversion.h  avulkanglfwcontext.h  avulkanglfwsetup.h  avulkanshaderpipeline.h  avulkanswapchain.h  avulkantriangle.h  build.sh  pch.h  (+1 more)
AlmondShell/assets/vulkan/shaders/: frag.glsl  frag.spv  gui_frag.spv.txt  gui_vert.spv.txt  vert.spv
AlmondShell/docs/: README.md  aengineconfig_flags.md  build_presets.md  build_scripts.md  context_audit.md  engine_analysis.md  file_structure.txt  filelist.txt  legacy linuxdoc.txt  menu_overlay_backend_audit.md  renderer_regression_plan.md  runtime_operations.md  tools_list.md  wsl_vcpkg_setup.md
AlmondShell/examples/ConsoleApplication1/: ConsoleApplication1.vcxproj  main.cpp
AlmondShell/examples/ConsoleApplication1/assets/vulkan/: texture.ppm
AlmondShell/examples/ConsoleApplication1/atlas_dump_backup/: __agui_builtin_0_0.ppm  __agui_builtin_0_1.ppm  __agui_builtin_0_29.ppm  a2048like_atlas_2_2.ppm  acellularsim_atlas_2_2.ppm  acellularsim_atlas_2_3.ppm  asandsim_atlas_2_2.ppm  asnakelike_atlas_2_2.ppm  asokobanlike_atlas_2_2.ppm  font_atlas_1_38.ppm  tetrisatlas_2_2.ppm
AlmondShell/examples/ConsoleApplication1/atlases/: a2048like_atlas_2_2.ppm  afroggerlike_atlas_2_2.ppm  amatch3like_atlas_2_2.ppm  asnakelike_atlas_2_2.ppm  minesweeper_atlas_2_2.ppm
AlmondShell/examples/StaticLib1/: StaticLib1.cpp  StaticLib1.vcxproj  StaticLib1.vcxproj.filters
AlmondShell/include/: a2048like.hpp  aapplicationmodule.hpp  aatlasmanager.hpp  aatlastexture.hpp  abuildsystem.hpp  acellularsim.hpp  acommandline.hpp  acontext.hpp  acontext.vulkan.hpp  acontextmultiplexer.hpp  acontextstate.hpp  acontextstatemanager.hpp  acontextwindow.hpp  adiagnostics.hpp  aenduserapplication.hpp  aengine.backend_counts.hpp  aengine.config.hpp  aengine.hpp  aengine.scene_factories.hpp  aengineconfig.hpp  aentity.hpp  aentitycomponents.hpp  aentityhistory.hpp  afontrenderer.hpp  aframework.hpp  aframework_wgl.hpp  afroggerlike.hpp  agui.hpp  aguimenu.hpp  ainput.hpp  alogger.hpp  amatch3like.hpp  aminesweeperlike.hpp  anet.hpp  anoheapguard.hpp  aopenglcontext.hpp  aopenglplatform.hpp  aopenglquad.hpp  aopenglrenderer.hpp  aopenglstate.hpp  (+37 more)
AlmondShell/modules/: a2048like.ixx  aapplicationmodule.ixx  aatlas.manager.ixx  aatlas.texture.ixx  aatlasmanager.ixx  aatlastexture.ixx  aautility.noheapguard.ixx  abuildsystem.ixx  acellularsim.ixx  acodeinspector.ixx  acommandline.cppm  acommandline.ixx  acommandqueue.ixx  acompiler.ixx  acontext.control.ixx  acontext.ixx  acontext.noop.context.ixx  acontext.opengl.context.ixx  acontext.opengl.platform.ixx  acontext.opengl.quad.ixx  acontext.opengl.renderer.ixx  acontext.opengl.state.ixx  acontext.opengl.textures.ixx  acontext.raylib.api.cppm  acontext.raylib.api.ixx  acontext.raylib.context.ixx  acontext.raylib.context.win.ixx  acontext.raylib.contextinput.ixx  acontext.raylib.input.ixx  acontext.raylib.renderer.ixx  acontext.raylib.state.ixx  acontext.raylib.textures.ixx  acontext.sdl.context.ixx  acontext.sdl.renderer.ixx  acontext.sdl.state.ixx  acontext.sdl.textures.ixx  acontext.sfml.context.ixx  acontext.sfml.renderer.ixx  acontext.sfml.state.ixx  acontext.sfml.textures.ixx  (+222 more)
AlmondShell/shaders/: triangle_quad.vert
AlmondShell/src/: acontext.cpp  acontext.raylib.bridge.cpp  acontext.vulkan.context-texture.cpp  acontext.vulkan.context-texture.cppm  acontext.vulkan.context_buffers.cpp  acontext.vulkan.dispatch_storage.cpp  acontext.vulkan.platform.context.cpp  acontext.vulkan.platform.descriptors.cpp  acontextmultiplexer.cpp  acontextmultiplexer_linux.cpp  acontextmultiplexer_win.cpp  acontextmultiplexer_win.cppm  aeditor.cpp  aengine.context.cpp  aengine.context.multiplexer.linux.cpp  aengine.context.multiplexer.win.cpp  aengine.cpp  aengine.gui.cpp  aengine.loops.cpp  aengine.loops.editor.cpp  aengine.loops.main.cpp  aengine.loops.menu.cpp  aengine.scene_factories.cpp  aengine.scripting.compiler.cpp  afilewatch.cpp  afont.renderer.cpp  afontrenderer.cpp  agui.cpp  aopenglplatform_linux.cpp  aopenglplatform_win.cpp  ascriptingsystem.cpp  main.cpp  updater_bootstrap.cpp
AlmondShell/src modules/: acompiler.cppm  acontext.opengl.platform.linux.cppm  acontext.opengl.platform.win.cppm  acontext.raylib.api.cpp  acontext.raylib.api.cppm  acontext.raylib.context.win.cppm  acontext.raylib.context.win.ixx  acontext.raylib.platform.impl.cppm  aeditor.cppm  aengine.context.cpp  aengine.context.cppm  aengine.context.multiplexer.linux.cpp  aengine.context.multiplexer.linux.cppm  aengine.context.multiplexer.win.cpp  aengine.context.multiplexer.win.cppm  aengine.context.win.cpp  aengine.cpp  aengine.cppm  aengine.gui.cpp  aengine.gui.cppm  aengine.scripting.compiler.cpp  aengine.scripting.compiler.cppm  afilewatch.cpp  afilewatch.cppm  afont.renderer.cppm  afont.renderer.impl.cppm  almondshell.cppm  aopenglplatform_win.cppm  renderer_smoke_harness.cpp  renderer_smoke_harness.cppm
AlmondShell/stb/: stb_truetype.h
(+62 files in other folders)
